add icon for ios

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,9 @@ icons_launcher:
   platforms:
     android:
       enable: true
+    ios:
+      enable: true
+    
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
